syntax = "proto3";

package specialist;

option go_package = "analysis/proto/pb-go;pb";

// Universal service for all specialized detectors (Toxicity, Business, etc.)
service SpecialistService {
  // Analyzes message content and returns a score-based verdict
  rpc Analyze (AnalysisRequest) returns (AnalysisResponse);
}

// Data sent by the Master binary (Chat-Lab)
message AnalysisRequest {
  string message_id = 1;      // Unique identifier for BadgerDB correlation
  string content = 2;         // Raw text to be processed by the model
  map<string, string> tags = 3; // Metadata for contextual filtering (e.g., room_id)
}

// Response from the Specialist binary (m2cgen transpiled code)
message AnalysisResponse {
  float score = 1;            // Probability score between 0.0 and 1.0
  string label = 2;           // Human-readable verdict (e.g., "SPAM", "TOXIC")
  string model_version = 3;   // Identifier for the specific model version used

  // Performance metrics for Lead Time monitoring
  int64 process_time_ms = 4;  // Internal execution time in milliseconds

  // Health and status tracking
  string status = 5;          // Status message (e.g., "OK", "ERROR_INFERENCE")
}