syntax = "proto3";

package analyzer;
option go_package = "chat-lab/proto/analyzer";

import "google/protobuf/timestamp.proto";

service FileAnalyzerService {
  rpc Analyze(stream FileAnalyzerRequest) returns (FileAnalyzerResponse);
}

message FileAnalyzerRequest {
  // Complete path (ex: E:\Photos\holidays.jpg)
  string path = 1;
  // ex: Disk UUID
  string drive_id = 2;

  // System metadata (from syscalls)
  uint64 size = 3;
  // Bit mask Windows
  uint32 attributes = 4;

  // Local intelligence (Sniffing)
  string mime_type = 5;
  // First 512 bytes
  bytes magic_bytes = 6;

  // Context
  google.protobuf.Timestamp scanned_at = 7;
  SourceType source_type = 8;
}

enum SourceType {
  UNSPECIFIED= 0;
  LOCAL_FIXED = 1;  // Internal SSD/HDD
  REMOVABLE = 2;    // USB / Carte SD
  NETWORK = 3;      // NAS / SMB
}

message FileAnalyzerResponse {
  uint64 files_received = 1;
  uint64 bytes_processed = 2;
  google.protobuf.Timestamp ended_at = 3;
}